// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> DisableApp 1`] = `
<div>
  <label
    className="jc-radio-wrapper jc-radio-wrapper-disabled"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio jc-radio-disabled"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={true}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={undefined}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <br />
  <label
    className="jc-radio-wrapper jc-radio-wrapper-disabled"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio jc-radio-checked jc-radio-disabled"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={true}
        className="jc-radio-input"
        disabled={true}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={undefined}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <div
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <button
      className="jc-btn jc-btn-primary"
      onClick={[Function]}
      type="button"
    >
      <span>
        Toggle disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`<Radio /> Radio basic 1`] = `
<label
  className="jc-radio-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="jc-radio"
    style={Object {}}
  >
    <input
      autoFocus={undefined}
      checked={false}
      className="jc-radio-input"
      disabled={undefined}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="radio"
      value={undefined}
    />
    <span
      className="jc-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`<Radio /> RadioGroupApp 1`] = `
<div
  className="jc-radio-group"
  id={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <label
    className="jc-radio-wrapper jc-radio-wrapper-checked"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio jc-radio-checked"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={true}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={1}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={2}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={3}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={4}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`<Radio /> RadioGroupMoreApp 1`] = `
<div
  className="jc-radio-group"
  id={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <label
    className="jc-radio-wrapper jc-radio-wrapper-checked"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={
      Object {
        "display": "block",
        "height": "30px",
        "lineHeight": "30px",
      }
    }
  >
    <span
      className="jc-radio jc-radio-checked"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={true}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={1}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      Option A
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={
      Object {
        "display": "block",
        "height": "30px",
        "lineHeight": "30px",
      }
    }
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={2}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      Option B
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={
      Object {
        "display": "block",
        "height": "30px",
        "lineHeight": "30px",
      }
    }
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={3}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      Option C
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={
      Object {
        "display": "block",
        "height": "30px",
        "lineHeight": "30px",
      }
    }
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name={undefined}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={4}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      More...
    </span>
  </label>
</div>
`;

exports[`<Radio /> RadioGroupOptionApp 1`] = `
<div>
  <div
    className="jc-radio-group"
    id={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <label
      className="jc-radio-wrapper jc-radio-wrapper-checked"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio jc-radio-checked"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={true}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Apple"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      className="jc-radio-wrapper"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={false}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Pear"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      className="jc-radio-wrapper"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={false}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Orange"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    className="jc-radio-group"
    id={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <label
      className="jc-radio-wrapper jc-radio-wrapper-checked"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio jc-radio-checked"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={true}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Apple"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      className="jc-radio-wrapper"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={false}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Pear"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      className="jc-radio-wrapper"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={false}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Orange"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    className="jc-radio-group"
    id={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <label
      className="jc-radio-wrapper jc-radio-wrapper-checked"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio jc-radio-checked"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={true}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Apple"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      className="jc-radio-wrapper"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={false}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Pear"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      className="jc-radio-wrapper"
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <span
        className="jc-radio"
        style={Object {}}
      >
        <input
          autoFocus={undefined}
          checked={false}
          className="jc-radio-input"
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={undefined}
          onFocus={[Function]}
          readOnly={undefined}
          tabIndex={undefined}
          type="radio"
          value="Orange"
        />
        <span
          className="jc-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`<Radio /> Radiobutton 1`] = `
<div>
  <div>
    <div
      className="jc-radio-group"
      id={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-checked"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-checked"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={true}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="a"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="b"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="c"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="d"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <div
      className="jc-radio-group"
      id={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-checked"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-checked"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={true}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="a"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-disabled"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-disabled"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={true}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="b"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="c"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="d"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <div
      className="jc-radio-group"
      id={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-checked jc-radio-button-wrapper-disabled"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-checked jc-radio-button-disabled"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={true}
            className="jc-radio-button-input"
            disabled={true}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="a"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-disabled"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-disabled"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={true}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="b"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-disabled"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-disabled"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={true}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="c"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-disabled"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-disabled"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={true}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="d"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`<Radio /> Radiogroup-with-name 1`] = `
<div
  className="jc-radio-group"
  id={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <label
    className="jc-radio-wrapper jc-radio-wrapper-checked"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio jc-radio-checked"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={true}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name="radiogroup"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={1}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name="radiogroup"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={2}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name="radiogroup"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={3}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    className="jc-radio-wrapper"
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    style={undefined}
  >
    <span
      className="jc-radio"
      style={Object {}}
    >
      <input
        autoFocus={undefined}
        checked={false}
        className="jc-radio-input"
        disabled={false}
        id={undefined}
        name="radiogroup"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        readOnly={undefined}
        tabIndex={undefined}
        type="radio"
        value={4}
      />
      <span
        className="jc-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`<Radio /> SizeApp 1`] = `
<div>
  <div>
    <div
      className="jc-radio-group jc-radio-group-large"
      id={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-checked"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-checked"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={true}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="a"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="b"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="c"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="d"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <div
      className="jc-radio-group"
      id={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-checked"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-checked"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={true}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="a"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="b"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="c"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="d"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <div
      className="jc-radio-group jc-radio-group-small"
      id={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      style={undefined}
    >
      <label
        className="jc-radio-button-wrapper jc-radio-button-wrapper-checked"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button jc-radio-button-checked"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={true}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="a"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="b"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="c"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        className="jc-radio-button-wrapper"
        onMouseEnter={undefined}
        onMouseLeave={undefined}
        style={undefined}
      >
        <span
          className="jc-radio-button"
          style={Object {}}
        >
          <input
            autoFocus={undefined}
            checked={false}
            className="jc-radio-button-input"
            disabled={false}
            id={undefined}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            readOnly={undefined}
            tabIndex={undefined}
            type="radio"
            value="d"
          />
          <span
            className="jc-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;
